2001-04-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Display.pm (display_data): Fix typo in checking @_ rather than $@!

	* Display/KAPVIEW.pm (histogram): Need to quote the range

2001-04-15  Tim Jenness <t.jenness@jach.hawaii.edu>

	* Release ORAC-DR 2.1-0 to Starlink

2001-04-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm: Fix pod error and remove header() and userheader() 

2001-03-29  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_start_algorithm_engines): Fix problem with -noeng
	(for some reason it had not set a default hash ref)

2001-03-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UFTI.pm (calc_orac_headers): Make sure we run the base
	class version to get the ORAC_ headers

2001-03-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: AGI_DIR removal now done by ORAC::Inst::Defn

	* Print.pm: Add ORAC::Event dependency

	* Recipe.pm (_check_obey_status_string): Fix pattern match for
	task name

	* Frame/CGS4.pm (findnsubs): Use more intelligence when searching
	for .I components

2001-03-19  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UFTI.pm: Add ORAC_ header support

	* Frame/UKIRT.pm: Add ORAC_ header support

	* Frame/IRCAM2.pm: Add ORAC_ header support

	* Frame.pm (calc_orac_headers): Add support for ORAC_
	keywords. Add translate_hdr

	* Xorac.pm: Fix spelling of my name

2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_add_code_to_recipe): Return "good" status at recipe end

	* Core.pm (orac_print_configuration): Fix $$log_options

2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (inout): Use _split_fname and _join_fname

	* Frame/JCMT.pm: Can  use base class inout() method

	* Recipe.pm (_check_obey_status_string): Handle { "mon" } syntax
	for hash key. Make sure that the monolith name is reasonable
	before using delete.

2001-01-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (execute): Add status check on return. Print message
	when monolith is bad
